# UI-AgentPath-2026

./: .env.example  .gitignore  ARCHITECTURE.md  FEEDBACK_AGENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  Makefile  QUICK_START.md  README.md  README_FEEDBACK_AGENT.md  SETTINGS_GUIDE.md  docker-compose.yml  onlooker.db  pyproject.toml  requirements.txt
agent_prompts/: README.md  audience_reaction.md  document_analysis.md  legacy_coaching.md
audience_settings/: .env.example  Dockerfile  Makefile  README.md  agent.py  db.py  groups.py  langgraph.json  main.py  model.py  pyproject.toml
audience_settings/components/: pubsub.yaml
backend/: .dockerignore  Dockerfile  README.md  __init__.py  database.py  main.py  requirements.txt
chroma_data/: .gitkeep  chroma.sqlite3
containers_env/: .env.example  Dockerfile  README.md  arm-template.json  deploy-mcp.ps1  docker-compose.yml
data_ingestor/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  __init__.py  db.py  main.py  requirements.txt  seed_database.py
data_processor/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  __init__.py  __main__.py  build_profiles.py  fetch_data_commons.py  foundry_iq.py  grounding.py  llm_client.py  (+3 more)
develop_analysis/: .env.example  .gitignore  Dockerfile  Makefile  README.md  agent.py  db.py  langgraph.json  main.py  pyproject.toml  requirements.txt
features_extractor/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  agent.py  chroma_io.py  dapr_io.py  db.py  langgraph.json  main.py  pyproject.toml  requirements.txt
(+139 files in other folders)
